Pif: Update to Pixel 8a (akita)
Signed-off-by: drpto <dr.juniornoob@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,18 +7,18 @@
 
     <string name="app_name">Pif</string>
     <string name="pif_title">Play integrity fix</string>
-    <string name="manufacturer_title">Manufacturer</string>
-    <string name="model_title">Model</string>
-    <string name="fingerprint_title">Fingerprint</string>
-    <string name="brand_title">Brand</string>
-    <string name="product_title">Product</string>
-    <string name="device_title">Device</string>
-    <string name="release_title">Release</string>
-    <string name="id_title">ID</string>
-    <string name="incremental_title">Incremental</string>
-    <string name="type_title">Type</string>
-    <string name="tags_title">Tags</string>
-    <string name="security_patch_title">Security patch</string>
-    <string name="device_initial_sdk_int_title">Shipping API level</string>
+    <string name="manufacturer_title">Google</string>
+    <string name="model_title">Pixel 8a</string>
+    <string name="fingerprint_title">google/akita_beta/akita:15/AP41.240925.009/12534705:user/release-keys</string>
+    <string name="brand_title">google</string>
+    <string name="product_title">akita_beta</string>
+    <string name="device_title">akita</string>
+    <string name="release_title">15</string>
+    <string name="id_title">AP41.240925.009</string>
+    <string name="incremental_title">12534705</string>
+    <string name="type_title">user</string>
+    <string name="tags_title">release-keys</string>
+    <string name="security_patch_title">2024-10-05</string>
+    <string name="device_initial_sdk_int_title">21</string>
 
 </resources>
